# hotel_rental

./: .env.template  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.prod.yaml  docker-compose.test.yaml  main.py  prometheus.yml  pyproject.toml  pytest.ini  ruff.toml
app/: lifespan.py  logger.py  main.py  settings.py  tools.py
app/admin_panel/: admin_controller.py  auth.py  base.py  router.py  utils.py
app/admin_panel/bookings/: views.py
app/api/: dependencies.py  handlers.py  middlewares.py
app/api/version_1/: router.py
app/celery/: celery_app.py  celery_controller.py  fake_tasks.py  scheduled.py  tasks.py  templates.py
app/core/interfaces/: transaction_context.py  transaction_manager.py
app/dao/authorization/: adapters.py  dao.py  exceptions.py  helpers.py  schemas.py
app/dao/base/: adapters.py  dao.py  exceptions.py  helpers.py  schemas.py
app/dao/bookings/: adapters.py  dao.py  helpers.py  schemas.py
app/dao/resource_manager/: dao.py
app/db/: base.py  session.py  utils.py
app/db/migrations/: env.py
app/db/models/: __init__.py  bookings_model.py  hotels_model.py  hotels_services_model.py  images_model.py  premium_level_varieties_model.py  rooms_model.py  rooms_services_model.py  service_varieties_model.py  users_model.py
app/dependencies/: auth.py  authorization.py  base.py  bookings.py  check.py  resource_manager.py
app/domain/base/: exceptions.py
app/domain/bookings/: booking_domain.py  exceptions.py
app/ports/primary/: authorization.py  bookings.py  resource_manager.py
app/redis/: deroctor_manager.py  redis_controller.py
app/services/authorization/: exceptions.py  helpers.py  schemas.py  service.py
app/services/base/: exceptions.py  mixins.py
app/services/bookings/: exceptions.py  schemas.py  service.py  templates.py
app/services/check/: exceptions.py  schemas.py  services.py
app/services/resource_manager/: service.py
app/utils/admin_panel/: admin_controller.py  auth.py  base.py
app/utils/celery/: celery_app.py  celery_controller.py  fake_task.py  scheduled.py  tasks.py
app/utils/prometheus/: instrumentator.py
app/utils/redis/: redis_controller.py
app/web/api/: dependencies.py  (+2 more)
docker/: docker-compose.test.yaml
tests/: __init__.py  conftest.py  db_preparer.py  fake_session.py  fake_transaction_context.py
tests/db_dumps/: dump_for_manual_testing.sql  dump_of_lookup_tables.sql
tests/system/: conftest.py
(+123 files in other folders)
