[tool.poetry]
name = "hotel-rental"
version = "0.4.5"
description = ""
authors = ["Ilia Samodin <broobooot@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.110.0"}
uvicorn = "^0.29.0"
python-dotenv = "^1.0.1"
pydantic = "^2.6.4"
sqlalchemy = {extras = ["all"], version = "^2.0.29"}
alembic = "^1.13.1"
asyncpg = "^0.29.0"
greenlet = "^3.0.3"
black = "^24.3.0"
autoflake = "^2.3.1"
isort = "^5.13.2"
sqlalchemy-utils = "^0.41.2"
pytest = "^8.1.1"
sqlparse = "^0.4.4"
asyncio = "^3.4.3"
toml = "^0.10.2"
pytest-asyncio = "^0.23.6"
icecream = "^2.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
